--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+case study 1/Case Study 1_How does a bike-share navigate speedy success.pdf
+case study 2/
+case study 3/
+
