--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,6 @@ po/*~
 rsconnect/
 
 case study 1/Case Study 1_How does a bike-share navigate speedy success.pdf
-case study 2/
-case study 3/
+case study 2
+case study 3
 
